<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="diu.edu.bd.diuclassroutine.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_main"
        android:scrollbars="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDayOfWeek"
        android:layout_above="@+id/buttonReset"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/empty_string"
        android:id="@+id/textViewDayOfWeek"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#6A326D"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recycler_view_main"
        android:text="@string/button_next_label"
        android:id="@+id/buttonNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="nextButtonPressed" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reset_label"
        android:id="@+id/buttonReset"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/buttonNext"
        android:onClick="resetButtonPressed" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_deadlines_label"
        android:id="@+id/buttonDeadlines"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/buttonReset"
        android:onClick="deadlineButtonPressed"/>

</RelativeLayout>
